--- a/index.html
+++ b/index.html
@@ -9,12 +9,30 @@
         <script src="java/script.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="imagenes/logo_cantabria.png" type="image/png">
     </head>
-    
     <body>
+        <nav id="menu">
+            <div class="menu-contenedor">
+    
+              <div class="menu-izquierda">
+                <a href="index.html" class="logo">
+                <img src="imagenes/cantabria_infinita.png" alt="Visita Cantabria">
+                </a>
+                </div>
+
+              <ul class="menu-derecha">
+                <li><a href="#historia">Historia</a></li>
+                <li><a href="#naturaleza">Naturaleza</a></li>
+                <li><a href="#ciudades">Ciudades y villas</a></li>
+                <li><a href="#playas">Playas</a></li>
+                <li><a href="#planes">Planes</a></li>
+                <li><a href="#deporte">Deporte</a></li>
+              </ul>
+            </div>
+        </nav>
 
 
     </body>
