dos secciones nuevas

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section class="seccion-naturaleza">
     
     <figure class="naturaleza-imagen">
-        <img src="imagenes/1522370-1920x1280-desktop-hd-cantabrian-mountains-background-_1_.webp" alt="Paisaje natural de Cantabria">
+        <img src="imagenes/naturaleza_cantabria.webp" alt="Paisaje natural de Cantabria">
     </figure>
 
     <div class="naturaleza-texto">
@@ -88,13 +88,33 @@
         </header>
 
         <p>
-            Cantabria es un auténtico paraíso natural: montañas que se funden con el mar,
-            bosques infinitos, acantilados salvajes y valles que parecen detenidos en el tiempo.
-            Aquí la naturaleza no es un escenario, es parte de la vida cotidiana.
+            Cantabria es un auténtico paraíso natural: montañas que se funden con el mar, bosques infinitos, acantilados salvajes y valles que parecen detenidos en el tiempo. Aquí la naturaleza no es un escenario, es parte de la vida cotidiana.
         </p>
     </div>
 
   </section>
+
+  <section class="seccion-ciudades">
+
+    <div class="ciudades-texto">
+        <h2>Ciudades y Villas</h2>
+        <p>
+            Cantabria cuenta con ciudades y villas muy diferentes entre sí. Santander destaca por su bahía y su vida cultural; Santillana del Mar conserva un marcado carácter medieval; Comillas combina playa y modernismo; y Castro Urdiales une historia y ambiente marinero. Todas reflejan la diversidad y el carácter de Cantabria.
+        </p>
+    </div>
+
+    <div class="carrusel-ciudades">
+        <div class="carrusel">
+            <img src="imagenes/barcena-mayor.webp" alt="Barcena Mayor">
+            <img src="imagenes/comillas.webp" alt="Comillas">
+            <img src="imagenes/lierganes.webp" alt="Lierganes">
+            <img src="imagenes/mogrovejo.webp" alt="Mogrovejo">
+            <img src="imagenes/santander.webp" alt="santander">
+            <img src="imagenes/Santillana-del-Mar.webp" alt="Santillana del Mar">
+        </div>
+    </div>
+
+</section>
 
 
   </body>
