pruebas carrusel ciudades y villa

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
             <img src="imagenes/santander.webp" alt="santander">
             <img src="imagenes/Santillana-del-Mar.webp" alt="Santillana del Mar">
         </div>
+    
+
+        <div class="puntos">
+          <span class="activo"></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
     </div>
 
 </section>
