--- a/index.html
+++ b/index.html
@@ -157,53 +157,43 @@
 </section>
 
 
-<section id="Playas" class="seccion-grid">
+<section class="grid">
 
-    <div class="grid-item imagen-grande">
-        <img src="imagenes/playas.webp" alt="Playas Cantabria">
-    </div>
+    <section id="Playas" class="seccion-grid izquierda">
+        <div class="grid-item imagen-grande">
+            <img src="imagenes/playas.webp" alt="Playas Cantabria">
+        </div>
 
-    <div class="grid-item bloque-verde">
-        <h2>Playas</h2>
-        <p>
-            Kilómetros de playas abiertas, salvajes o urbanas. Buenas para pasear, surfear o simplemente mirar el mar.
-        </p>
-    </div>
+        <div class="grid-item bloque-verde">
+            <h2>Playas</h2>
+            <p>Kilómetros de playas abiertas, salvajes o urbanas. Buenas para pasear, surfear o simplemente mirar el mar.</p>
+        </div>
+    </section>
 
-</section>
+    <section id="Cabarceno" class="seccion-grid derecha">
+        <div class="grid-item bloque-verde-derecha">
+            <h2>Cabárceno</h2>
+            <p>Para vivir una experiencia en la selva africana no es necesario hacer miles de kilómetros.</p>
+            <a href="#" class="btn-blanco">Consigue ya tus entradas</a>
+        </div>
 
-<section id="Cabarceno" class="seccion-grid">
+        <div class="grid-item imagen-grande">
+            <img src="imagenes/cabarceno3.jpg" alt="Cabárceno">
+        </div>
+    </section>
 
-    <div class="grid-item bloque-verde">
-        <h2>Cabárceno</h2>
-        <p>
-            Para vivir una experiencia en la selva africana no es necesario hacer miles de kilómetros.
-        </p>
-        <a href="#" class="btn-blanco">Consigue ya tus entradas</a>
-    </div>
+    <section id="Deportes" class="seccion-grid izquierda">
+        <div class="grid-item imagen-grande">
+            <img src="imagenes/surf.webp" alt="Deporte en Cantabria">
+        </div>
 
-    <div class="grid-item imagen-grande">
-        <img src="imagenes/cabarceno3.jpg" alt="Cabárceno">
-    </div>
-
-</section>
-
-<section id="Deportes" class="seccion-grid">
-
-    <div class="grid-item imagen-grande">
-        <img src="imagenes/surf.webp" alt="Deporte en Cantabria">
-    </div>
-
-    <div class="grid-item bloque-verde">
-        <h2>Playas</h2>
-        <p>
-            Kilómetros de playas abiertas, salvajes o urbanas. Buenas para pasear, surfear o simplemente mirar el mar.
-        </p>
-    </div>
+        <div class="grid-item bloque-verde">
+            <h2>Deportes</h2>
+            <p>Desde surf hasta senderismo, Cantabria ofrece actividades al aire libre para todos los gustos.</p>
+        </div>
+    </section>
 
 </section>
-
-
 
   </body>
 
