--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
               <li><a href="#Ciudades">Ciudades y villas</a></li>
               <li><a href="#Playas">Playas</a></li>
               <li><a href="#Cabarceno">Cabárceno</a></li>
-              <li><a href="#Deportes">Deportes</a></li>
             </ul>
           </div>
 
@@ -156,45 +155,68 @@
 
 </section>
 
+<section id="Playas" class="seccion-playas">
+    
+    <figure class="playas-imagen">
+        <img src="imagenes/playas.webp" alt="Playas de Cantabria">
+    </figure>
 
-<section class="grid">
-
-    <section id="Playas" class="seccion-grid izquierda">
-        <div class="grid-item imagen-grande">
-            <img src="imagenes/playas.webp" alt="Playas Cantabria">
-        </div>
-
-        <div class="grid-item bloque-verde">
+    <div class="playas-texto">
+        <header>
             <h2>Playas</h2>
-            <p>Kilómetros de playas abiertas, salvajes o urbanas. Buenas para pasear, surfear o simplemente mirar el mar.</p>
-        </div>
-    </section>
+        </header>
 
-    <section id="Cabarceno" class="seccion-grid derecha">
-        <div class="grid-item bloque-verde-derecha">
-            <h2>Cabárceno</h2>
-            <p>Para vivir una experiencia en la selva africana no es necesario hacer miles de kilómetros.</p>
-            <a href="#" class="btn-blanco">Consigue ya tus entradas</a>
-        </div>
+        <p>
+          En sus playas se mezcla la bravura del Cantábrico con la serenidad de los prados que descienden hasta la arena, creando un paisaje en el que naturaleza y mar dialogan sin prisa. Allí, entre dunas modeladas por el viento y rocas antiguas que emergen como guardianes, las mareas marcan el ritmo del día y transforman cada rincón casi sin que uno se dé cuenta.<br> Caminar por estas orillas es descubrir una costa que conserva su esencia, un lugar donde la luz cambia a cada instante y donde el visitante siente que el tiempo se abre, como la propia línea del horizonte.
+        </p>
+    </div>
 
-        <div class="grid-item imagen-grande">
-            <img src="imagenes/cabarceno3.jpg" alt="Cabárceno">
-        </div>
-    </section>
+  </section>
 
-    <section id="Deportes" class="seccion-grid izquierda">
-        <div class="grid-item imagen-grande">
-            <img src="imagenes/surf.webp" alt="Deporte en Cantabria">
-        </div>
+<section id="Cabarceno" class="cabarceno-seccion">
 
-        <div class="grid-item bloque-verde">
-            <h2>Deportes</h2>
-            <p>Desde surf hasta senderismo, Cantabria ofrece actividades al aire libre para todos los gustos.</p>
-        </div>
-    </section>
+  <div class="cabarceno-texto">
+    <h2>Cabárceno</h2>
+    <p>
+    El Parque de la Naturaleza de Cabárceno ofrece un encuentro único con especies animales en semilibertad, en un entorno impresionante de montañas y lagos. Aquí podrás observar osos, lobos, linces, elefantes y muchas otras especies que se mueven en amplios recintos diseñados para imitar su hábitat natural.<br> A lo largo de sus caminos, entre cuevas, colinas y miradores, descubrirás la interacción de animales y paisajes, donde la naturaleza y la conservación se dan la mano. ¡Descúbrelo!
+    </p>
+    <a href="#" class="boton-saber-mas">Saber más</a>
+  </div>
+
+  <div class="cabarceno-imagenes">
+    <figure class="cabarceno-item">
+      <img src="imagenes/Cabarceno.jpg" alt="Animales">
+    </figure>
+    <figure class="cabarceno-item">
+      <img src="imagenes/cabarceno-osos.jpg" alt="Finca">
+    </figure>
+  </div>
 
 </section>
 
-  </body>
+</body>
+
+  <footer class="site-footer">
+    <div class="footer-top">
+        <div class="footer-info">
+            <h3>Cantabria Infinita</h3>
+            <p>Descubre la belleza de Cantabria: naturaleza, cultura y patrimonio.</p>
+        </div>
+        <div class="footer-weather">
+            <p id="hora">Hora: --:--</p>
+            <p id="temperatura">Temperatura: --°C</p>
+        </div>
+    </div>
+
+    <div class="footer-logos">
+        <img src="imagenes/logo_cantabria.png" alt="Logo Cantabria">
+        <img src="imagenes/logo_espana.png" alt="Logo España">
+        <img src="imagenes/logo_europa.png" alt="Logo Europa">
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; 2025 Cantabria Infinita. Todos los derechos reservados.</p>
+    </div>
+</footer>
 
 </html>
