actualizacion footer y zona verde

--- a/index.html
+++ b/index.html
@@ -196,27 +196,48 @@
 
 </body>
 
-  <footer class="site-footer">
+<footer class="site-footer">
     <div class="footer-top">
-        <div class="footer-info">
-            <h3>Cantabria Infinita</h3>
-            <p>Descubre la belleza de Cantabria: naturaleza, cultura y patrimonio.</p>
+        <!-- COLUMNA IZQUIERDA: Newsletter -->
+        <div class="footer-column newsletter">
+            <h2>Suscríbete a <br>nuestra newsletter</h2>
+            <p>Recibe las últimas novedades sobre Cantabria.</p>
+            <form>
+                <input type="text" placeholder="Nombre y Apellido">
+                <input type="email" placeholder="Correo electrónico">
+                <button type="submit">Suscribirse</button>
+            </form>
         </div>
-        <div class="footer-weather">
-            <p id="hora">Hora: --:--</p>
-            <p id="temperatura">Temperatura: --°C</p>
+
+        <!-- COLUMNA DERECHA: Información y contacto -->
+        <div class="footer-column info-contacto">
+            <h3>Contacto</h3>
+            <p>info@cantabrinfinita.es</p>
+            <p>Tel: +34 123 456 789</p>
+            <p>Calle las Cruces, 12, Santander</p>
+            <br>
+            <p id="hora"></p>
+            <p id="temperatura"></p>
         </div>
     </div>
 
+    <!-- Línea horizontal -->
+    <div class="footer-separator"></div>
+
+    <!-- LOGOS DE ENTIDADES -->
     <div class="footer-logos">
-        <img src="imagenes/logo_cantabria.png" alt="Logo Cantabria">
-        <img src="imagenes/logo_espana.png" alt="Logo España">
-        <img src="imagenes/logo_europa.png" alt="Logo Europa">
+        <img src="imagenes/Logotipo_del_Gobierno_de_Cantabria.svg" alt="Logo Gobierno de Cantabria">
+        <img src="imagenes/santandercruise-300x169.png" alt="Logo Turismo Santander">
+        <img src="imagenes/cantabria_infinita.png" alt="Logo Cantabria Infinita">
+        <img src="imagenes/Logotipo_del_Ministerio_de_Industria_y_Turismo.svg.png" alt="Logo Ministerio Industria y Turismo">
+        <img src="imagenes/ES_Financiado_por_la_Union_Europea.webp" alt="Logo Unión Europea">
     </div>
 
+    <!-- DERECHOS RESERVADOS -->
     <div class="footer-bottom">
         <p>&copy; 2025 Cantabria Infinita. Todos los derechos reservados.</p>
     </div>
 </footer>
+
 
 </html>
