pruebas pg nueva

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <p>
     El Parque de la Naturaleza de Cabárceno ofrece un encuentro único con especies animales en semilibertad, en un entorno impresionante de montañas y lagos. Aquí podrás observar osos, lobos, linces, elefantes y muchas otras especies que se mueven en amplios recintos diseñados para imitar su hábitat natural.<br> A lo largo de sus caminos, entre cuevas, colinas y miradores, descubrirás la interacción de animales y paisajes, donde la naturaleza y la conservación se dan la mano. ¡Descúbrelo!
     </p>
-    <a href="#" class="boton-saber-mas">Saber más</a>
+    <a href="cabarceno.html" class="boton-saber-mas">Saber más</a>
   </div>
 
   <div class="cabarceno-imagenes">
