ajustes mediaqueries finales

--- a/cabarceno.html
+++ b/cabarceno.html
@@ -60,7 +60,7 @@
     <a href="#introduccion" onclick="closeMenu()">¿Quiénes somos?</a>
     <a href="#ficha" onclick="closeMenu()">Información</a>
     <a href="#galeria" onclick="closeMenu()">Galería</a>
-    <a href="#playas" onclick="closeMenu()">Playas</a>
+    <a href="#grafica" onclick="closeMenu()">Visitas</a>
     <a href="#como-llegar" onclick="closeMenu()">¿Cómo llegar?</a>
   </nav>
 </header>
@@ -212,7 +212,7 @@
         </div>
 
         <div class="grafica-texto">
-        <h2>Estadísticas <br>de Visitas</h2>
+        <h2>Estadística <br>de Visitas</h2>
         <p>
             Aquí puedes ver cómo ha evolucionado el número de visitas a lo largo de este año. <br> Esta gráfica se actualiza según los datos que vayamos generando.
         </p>
