jquery en vez de java script puro, además de arreglo de errores en la flecha de desplazamiento

--- a/cabarceno.html
+++ b/cabarceno.html
@@ -67,7 +67,7 @@
 
 <section class="portada">
     <!-- Aquí insertas tu imagen de fondo -->
-    <img src="imagenes/imagenespg2/portada-cabarceno-1.webp" alt= Paisaje de Cabárceno>
+    <img src="imagenes/imagenespg2/portada-cabarceno-1.webp" alt= "Paisaje de Cabárceno">
 
     <div class="overlay"></div>
 
@@ -122,7 +122,7 @@
             <p>Transporte dentro del parque</p>
         </div>
         <div class="ficha-item">
-            <i class="fa-solid fa-utensils"></i>"></i>
+            <i class="fa-solid fa-utensils"></i>
             <p>Cafeterías y restaurantes</p>
         </div>
         <div class="ficha-item">
@@ -190,11 +190,11 @@
         <span class="modal-close">×</span>
 
         <button class="modal-prev">‹</button>
-        <img id="modalImg" src="" alt="">
+        <img id="modalImg" src="imagenes/placeholder.png" alt="Imagen del animal">
         <button class="modal-next">›</button>
 
         <div class="modal-info">
-            <h3 id="modalTitulo"></h3>
+            <h3 id="modalTitulo">Nombre del animal</h3>
             <p id="modalTexto"></p>
         </div>
 
@@ -239,10 +239,6 @@
     </div>
 </section>
 
-
-
-</body>
-
 <footer class="site-footer">
 <div class="footer-top">
   <div class="footer-column newsletter">
@@ -285,5 +281,6 @@
     </div>
 </footer>
 
+</body>
 
 </html>
