--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
 
 
     <!-- FONDO VERDE -->
-    <section id="historia" class="seccion-verde">
+    <div id="historia" class="seccion-verde">
         <p>
         Cantabria guarda una historia que va desde el arte rupestre prehistórico hasta villas medievales y legado industrial. Aquí nació una de las primeras grandes expresiones artísticas de la humanidad y aún se respira pasado en calles empedradas y antiguas casonas.
         </p>
-    </section>
+    </div>
 
     <!-- SECCIÓN VIDEO -->
-  <section  class="seccion-video">
+  <div  class="seccion-video">
     <video autoplay muted loop playsinline>
         <source src="videos/Cantabria-Infinita-CANTABRIA-TURISMO.webm" type="video/webm">
         </video>
 
     <div class="video-overlay"></div>
 
-  </section>
+      </div>
 
   <section id="naturaleza" class="seccion-naturaleza">
     
@@ -205,7 +205,6 @@
 
 </section>
 
-</body>
 
 <footer class="site-footer">
 <div class="footer-top">
@@ -248,6 +247,6 @@
         <p>&copy; 2025 Cantabria Infinita. Todos los derechos reservados.</p>
     </div>
 </footer>
-
+</body>
 
 </html>
